[package]
name = "cf-proxy-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = "4.3.0"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["tcp", "full"] }
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["std", "derive"] }
serde_yaml = "0.9.21"
tokio = { version = "1.28.1", features = ["full"] }
url = "2.3.1"
